--- a/_data/data.yml
+++ b/_data/data.yml
@@ -40,7 +40,7 @@ career-profile:
       I am a PhD student in the [Institute for Software Research](https://www.isri.cmu.edu)
       at Carnegie Mellon University. I am a member of [squaresLab](https://squareslab.github.io)
       under supervision of my advisor [Prof. Claire Le Goues](https://clairelegoues.com).
-      My main reasearch interests are quality assurance for robotics and cyberphysical systems,
+      My main research interests are quality assurance for robotics and cyberphysical systems,
       automatic program repair, and program analysis.
       You can download my CV [here](/assets/resume.pdf).
 education:
